Fix example_runner.html to call env.addReporter rather that set env.reporter directly.

--- a/example/example_runner.html
+++ b/example/example_runner.html
@@ -12,7 +12,7 @@
 <body>
 <script type="text/javascript">
   var jasmineEnv = jasmine.getEnv();
-  jasmineEnv.reporter = new jasmine.TrivialReporter();
+  jasmineEnv.addReporter(jasmine.TrivialReporter());
   jasmineEnv.execute();
 </script>
 
