Use pretty dom printing.

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -29,7 +29,6 @@
   <script type="text/javascript" src="../src/WaitsForBlock.js"></script>
 
   <script type="text/javascript" src="../lib/TrivialReporter.js"></script>
-  <script type="text/javascript" src="../src/FancyHtmlReporter.js"></script>
   <script type="text/javascript" src="../lib/consolex.js"></script>
 
 
@@ -60,7 +59,8 @@
       var jasmineEnv = jasmine.getEnv();
       jasmineEnv.updateInterval = 1000;
 
-      var reporter = new jasmine.FancyHtmlReporter();
+      var reporter = new jasmine.TrivialReporter();
+      reporter.domPrettyPrint = true;
 
       jasmineEnv.addReporter(reporter);
 
